better resets and build tasks

--- a/release/index.html
+++ b/release/index.html
@@ -7,7 +7,13 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1>Test</h1>
+  <h1>h1 - Headline 1 - jqpgclI|1</h1>
+  <h2>h2 - Headline 2 - jqpgclI|1</h2>
+  <h3>h3 - Headline 3 - jqpgclI|1</h3>
+  <h4>h4 - Headline 4 - jqpgclI|1</h4>
+  <h5>h5 - Headline 5 - jqpgclI|1</h5>
+  <h6>h6 - Headline 6 - jqpgclI|1</h6>
+  <p>p - paragraph text</p>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </body>
 </html>
