--- a/release/index.html
+++ b/release/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  
+
+  <h1>Playground</h1>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </body>
 </html>
