start to new gulp setup + some more boilerplate code

--- a/_source/index.html
+++ b/_source/index.html
@@ -5,7 +5,7 @@
   <title>Patrick Sullivan</title>
   <meta content="Wait, am I on the Googles? I'm Patrick Sullivan. I build things that relate to my keywords." name="description"/>
   <meta content="pac, pac-12, logo, patrick, pat, sullivan, sully, designer, design, developer, develop, development, guard, register, struck, project, psullivan6, ps6, championship, work, college, university, saddleback, football, basketball, sports" name="keywords"/>
-  <link rel="stylesheet" href="/css/css.css">
+  <link rel="stylesheet" href="/css/styles.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
