--- a/release/index.html
+++ b/release/index.html
@@ -1,13 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Playground</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <title>Patrick Sullivan</title>
+  <meta content="Wait, am I on the Googles? I'm Patrick Sullivan. I build things that relate to my keywords." name="description"/>
+  <meta content="pac, pac-12, logo, patrick, pat, sullivan, sully, designer, design, developer, develop, development, guard, register, struck, project, psullivan6, ps6, championship, work, college, university, saddleback, football, basketball, sports" name="keywords"/>
+  <link rel="stylesheet" href="/css/styles.css">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <section id="page"></section>
+
+  <script type="text/javascript" data-main="main.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.16/require.min.js"></script>
+  <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-67512321-1', 'auto');ga('send', 'pageview');</script>
 </body>
 </html>
